# pointcloud_visualizer

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh  main.cc
src/: camera.cc  camera.hpp  cmap.hpp  datalabel.hpp  hud.cc  hud.hpp  input.cc  input.hpp  main.cc  main.hpp  mesh.cc  mesh.hpp  meshed_visualizer.cc  parser.cc  parser.hpp  point_ops.cc  point_ops.hpp  pointcloud_visualizer.cc  points.cc  points.hpp  renderer.cc  renderer.hpp  sandbox.cc  voxel.cc  voxel.hpp  voxel_visualizer.cc
utils/: apply_offsets.py  apply_semantic.py  bpa.cc  poission.cc  softgroup2msk.py  txt2ply.py
